--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
-    <title>Authentication</title>
+    <title>Components Authentication</title>
   </head>
   <body>
     <div id="root"></div>
