--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
-    <title>Components Authentication</title>
+    <title>Authentication Components</title>
   </head>
   <body>
     <div id="root"></div>
